tests/parser/validinput/included.idp
include "../included1.idp"

procedure main(){
	return 1
}