tests/parser/invalidinput/parseerror.idp
This is not an idp-file

procedure main(){
	return 1
}
